opensource/seaweedfs/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-ingress
spec:
  rules:
  - host: seaweedfs.bluesky.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seaweedfs-service
            port:
              number: 9333  # console port임 kubernetes 이외에서 호출해서 쓸일이 있을까...
